--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "electron .",
         "build-win": "electron-builder --win",
-        "build-mac": "electron-builder --mac"
+        "build-mac": "electron-builder --mac",
+        "publish": "electron-builder -p onTagOrDraft"
     },
     "devDependencies": {
         "electron": "10.1.2",
