--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "electron .",
         "build-win": "electron-builder --win",
         "build-mac": "electron-builder --mac",
-        "publish": "electron-builder -p onTagOrDraft"
+        "publish": "electron-builder"
     },
     "devDependencies": {
         "electron": "10.1.2",
