--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,11 +5,12 @@ on: push
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        runs-on: [macos-latest, windows-latest]
+        os: [macos-latest, windows-latest]
+
     steps:
     - uses: actions/checkout@v2
     - run: npm i
