--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "publish": "electron-builder"
     },
     "devDependencies": {
-        "electron": "10.1.2",
+        "electron": "^13.3.0",
         "electron-builder": "^22.9.1"
     },
     "author": "Mark Oude Elberink",
